--- a/css/modal.css
+++ b/css/modal.css
@@ -52,7 +52,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     background-color: var(--theme-bg);
     color: var(--theme-color);
